--- a/index.html
+++ b/index.html
@@ -6,31 +6,30 @@
   <title>Marcelo Santos Jr - DevOps Specialist</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
 <!-- Header / Hero -->
 <section class="py-5 text-white text-center bg-gradient">
-  <div class="container">
-    <div class="icon-circle mb-4">
-      <i class="fas fa-users fa-3x"></i>
-    </div>
+  <div class="icon-circle mb-4">
+  <img src="fotos/marcelo.jpg" alt="Foto de Marcelo Santos Jr" class="rounded-circle shadow" style="width: 120px; height: 120px; object-fit: cover;">
+</div>
     <h1 class="display-4 fw-bold">Marcelo Santos Jr</h1>
     <h2 class="lead text-light">DevOps & Infrastructure Specialist</h2>
     <div class="d-flex flex-wrap justify-content-center gap-2 my-4">
-      <span class="badge bg-secondary fs-6">🚀 E-commerce Specialist</span>
-      <span class="badge bg-secondary fs-6">🌐 Network Expert</span>
-      <span class="badge bg-secondary fs-6">🛠 Infrastructure</span>
-      <span class="badge bg-secondary fs-6">🔒 Security Professional</span>
+      <span class="badge bg-secondary fs-6">🚀 Especialista em E-commerce</span>
+      <span class="badge bg-secondary fs-6">🌐 Redes de Computadores</span>
+      <span class="badge bg-secondary fs-6">🛠 Infraestrutura</span>
+      <span class="badge bg-secondary fs-6">🔒 Segurança da Informação</span>
     </div>
     <p class="text-light col-lg-8 mx-auto mb-4">
-      Especialista em DevOps com 6+ anos de experiência em infraestrutura de e-commerce, redes corporativas e segurança da informação. Focada em soluções escaláveis e seguras.
+      Profissional de Tecnologia da Informação com mais de 15 anos de experiência, especializado em infraestrutura, segurança da informação e comércio eletrônico. Atuo na transformação de desafios tecnológicos em oportunidades estratégicas para negócios digitais.
     </p>
     <div class="d-flex flex-wrap justify-content-center gap-3">
-      <a href="mailto:ana.silva@email.com" class="btn btn-light text-primary"><i class="fas fa-envelope me-2"></i>Contato</a>
-      <a href="#" class="btn btn-outline-light"><i class="fab fa-github me-2"></i>GitHub</a>
-      <a href="#" class="btn btn-outline-light"><i class="fab fa-linkedin me-2"></i>LinkedIn</a>
+      <a href="https://wa.me/+5571992342639" target="_blank" class="btn btn-outline-light"><i class="fab fa-whatsapp me-2"></i>WhatsApp</a>
+      <a href="https://github.com/marcelosantosjr" class="btn btn-outline-light"><i class="fab fa-github me-2"></i>GitHub</a>
+      <a href="https://www.linkedin.com/in/marcelo-santos-015851135/" class="btn btn-outline-light"><i class="fab fa-linkedin me-2"></i>LinkedIn</a>
     </div>
   </div>
 </section>
@@ -40,14 +39,31 @@
   <div class="container">
     <h2 class="text-center fw-bold mb-5">Competências Técnicas</h2>
     <div class="row g-4">
-      <div class="col-md-6 col-lg-3" data-skill="Docker & Kubernetes" data-level="95"></div>
-      <div class="col-md-6 col-lg-3" data-skill="AWS/Azure Cloud" data-level="90"></div>
-      <div class="col-md-6 col-lg-3" data-skill="CI/CD Pipelines" data-level="92"></div>
-      <div class="col-md-6 col-lg-3" data-skill="E-commerce Platforms" data-level="88"></div>
+      <div class="col-md-6 col-lg-3" data-skill="Docker & Kubernetes" data-level="52"></div>
+      <div class="col-md-6 col-lg-3" data-skill="AWS e Azure" data-level="90"></div>
+      <div class="col-md-6 col-lg-3" data-skill="E-commerce Platforms" data-level="62"></div>
+      <div class="col-md-6 col-lg-3" data-skill="Prometheus e Grafana" data-level="48"></div>
       <div class="col-md-6 col-lg-3" data-skill="Network Security" data-level="85"></div>
-      <div class="col-md-6 col-lg-3" data-skill="Infrastructure as Code" data-level="90"></div>
-      <div class="col-md-6 col-lg-3" data-skill="Database Management" data-level="87"></div>
-      <div class="col-md-6 col-lg-3" data-skill="Linux/Unix Systems" data-level="93"></div>
+      <div class="col-md-6 col-lg-3" data-skill="Terraform" data-level="50"></div>
+      <div class="col-md-6 col-lg-3" data-skill="Banco de Dados (Sql)" data-level="67"></div>
+      <div class="col-md-6 col-lg-3" data-skill="Windows Server" data-level="75"></div>
+    </div>
+  </div>
+</section>
+
+<!-- Academic Background -->
+<section class="py-5 bg-white border-top border-bottom">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-5">Formação Acadêmica</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card shadow-sm mb-4">
+          <div class="card-body">
+            <h5 class="card-title mb-1">Bacharelado em Sistemas de Informação</h5>
+            <p class="card-text text-muted">Unifacs (2015 – 2019)</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -60,27 +76,70 @@
   </div>
 </section>
 
-<!-- Projects -->
+<!-- Skills -->
 <section class="py-5 bg-white">
   <div class="container">
-    <h2 class="text-center fw-bold mb-5">Projetos Destacados</h2>
-    <div class="row g-4" id="projectCards"></div>
-  </div>
-</section>
-
-<!-- Certifications -->
-<section class="py-5 bg-light">
-  <div class="container">
-    <h2 class="text-center fw-bold mb-5">Certificações</h2>
-    <div class="row g-3">
-      <div class="col-md-6" data-cert="AWS Certified Solutions Architect"></div>
-      <div class="col-md-6" data-cert="Certified Kubernetes Administrator"></div>
-      <div class="col-md-6" data-cert="CISSP - Certified Information Systems Security Professional"></div>
-      <div class="col-md-6" data-cert="CompTIA Network+ Certified"></div>
-      <div class="col-md-6" data-cert="Docker Certified Associate"></div>
+    <h2 class="text-center fw-bold mb-5">Habilidades que utilizei nas minhas experiências de trabalho:</h2>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
+      <div class="col">
+        <ul class="list-unstyled">
+          <li>Windows Server</li>
+          <li>AWS</li>
+          <li>MySQL</li>
+          <li>Windows Azure</li>
+          <li>N8N</li>
+          <li>Chatwoot</li>
+          <li>Evolution</li>
+          <li>Cloudways</li>
+          <li>Google Worspace</li>
+          <li>Microsoft Office 365</li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="list-unstyled">
+          <li>Trello</li>
+          <li>JSON</li>
+          <li>Power Automate</li>
+          <li>Docker</li>
+          <li>Node.js</li>
+          <li>WooCommerce</li>
+          <li>Figma</li>
+          <li>Photoshop</li>
+          <li>REST API</li>
+          <li>WORDPRESS</li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="list-unstyled">
+          <li>Zabbix</li>
+          <li>Prometheus</li>
+          <li>Linux/Unix Systems</li>
+          <li>Protocolo TCP/IP</li>
+          <li>Servidor dns</li>
+          <li>AngularJS</li>
+          <li>Angular Material</li>
+          <li>Componentização</li>
+          <li>Azure Container Apps</li>
+          <li>Python</li>
+        </ul>
+      </div>
+      <div class="col">
+        <ul class="list-unstyled">
+          <li>Manutenção de Computadore</li>
+          <li>Azure DevOps</li>
+          <li>Consumo de API</li>
+          <li>Firewalls</li>
+          <li>VPN</li>
+          <li>Protocolos de segurança TLS/SSL</li>
+          <li>Git</li>
+          <li>Armazenamento SAN</li>
+          <li>Kubernetes</li>
+          <li>Computação Serveless</li>
+        </ul>
+      </div>
     </div>
   </div>
-</section>
+</section
 
 <!-- Contact -->
 <section class="py-5 text-white text-center bg-gradient">
@@ -90,8 +149,8 @@
       Interessado em discutir projetos de infraestrutura, DevOps ou segurança? Entre em contato!
     </p>
     <div class="d-flex flex-wrap justify-content-center gap-4 mb-4">
-      <div><i class="fas fa-envelope me-2"></i> ana.silva@email.com</div>
-      <div><i class="fas fa-phone me-2"></i> +55 (11) 99999-9999</div>
+      <div><i class="fas fa-envelope me-2"></i> marcelojr.tech@hotmail.com</div>
+      <div><i class="fas fa-phone me-2"></i> +55 (71) 99234-2639</div>
       <div><i class="fas fa-map-marker-alt me-2"></i> São Paulo, SP</div>
     </div>
     <a href="mailto:ana.silva@email.com" class="btn btn-light text-primary"><i class="fas fa-envelope me-2"></i>Enviar Mensagem</a>
