--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="fotos/marcelo.jpg" alt="Foto de Marcelo Santos Jr" class="rounded-circle shadow" style="width: 120px; height: 120px; object-fit: cover;">
 </div>
     <h1 class="display-4 fw-bold">Marcelo Santos Jr</h1>
-    <h2 class="lead text-light">DevOps</h2>
+    <h2 class="lead text-light">DevOps & Infrastructure Specialist</h2>
     <div class="d-flex flex-wrap justify-content-center gap-2 my-4">
       <span class="badge bg-secondary fs-6">🚀 Especialista em E-commerce</span>
       <span class="badge bg-secondary fs-6">🌐 Redes de Computadores</span>
