--- a/index.html
+++ b/index.html
@@ -83,58 +83,58 @@
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
       <div class="col">
         <ul class="list-unstyled">
-          <li>Windows Server</li>
-          <li>AWS</li>
-          <li>MySQL</li>
-          <li>Windows Azure</li>
-          <li>N8N</li>
-          <li>Chatwoot</li>
-          <li>Evolution</li>
-          <li>Cloudways</li>
-          <li>Google Worspace</li>
-          <li>Microsoft Office 365</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Windows Server</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>AWS</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>MySQL</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Windows Azure</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>N8N</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Chatwoot</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Evolution</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Cloudways</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Google Worspace</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Microsoft Office 365</li>
         </ul>
       </div>
       <div class="col">
         <ul class="list-unstyled">
-          <li>Trello</li>
-          <li>JSON</li>
-          <li>Power Automate</li>
-          <li>Docker</li>
-          <li>Node.js</li>
-          <li>WooCommerce</li>
-          <li>Figma</li>
-          <li>Photoshop</li>
-          <li>REST API</li>
-          <li>WORDPRESS</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Trello</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>JSON</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Power Automate</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Docker</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Node.js</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>WooCommerce</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Figma</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Photoshop</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>REST API</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>WORDPRESS</li>
         </ul>
       </div>
       <div class="col">
         <ul class="list-unstyled">
-          <li>Zabbix</li>
-          <li>Prometheus</li>
-          <li>Linux/Unix Systems</li>
-          <li>Protocolo TCP/IP</li>
-          <li>Servidor dns</li>
-          <li>AngularJS</li>
-          <li>Angular Material</li>
-          <li>Componentização</li>
-          <li>Azure Container Apps</li>
-          <li>Python</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Zabbix</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Prometheus</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Linux/Unix Systems</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Protocolo TCP/IP</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Servidor dns</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>AngularJS</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Angular Material</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Componentização</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Azure Container Apps</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Python</li>
         </ul>
       </div>
       <div class="col">
         <ul class="list-unstyled">
-          <li>Manutenção de Computadore</li>
-          <li>Azure DevOps</li>
-          <li>Consumo de API</li>
-          <li>Firewalls</li>
-          <li>VPN</li>
-          <li>Protocolos de segurança TLS/SSL</li>
-          <li>Git</li>
-          <li>Armazenamento SAN</li>
-          <li>Kubernetes</li>
-          <li>Computação Serveless</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Manutenção de Computadores</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Azure DevOps</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Consumo de API</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Firewalls</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>VPN</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Protocolos de segurança TLS/SSL</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Git</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Armazenamento SAN</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Kubernetes</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Computação Serveless</li>
         </ul>
       </div>
     </div>
