--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
 <body>
 
 <!-- Header / Hero -->
-<section class="py-5 text-white text-center bg-gradient">
+<section class="py-5 text-center hero-section">
   <div class="icon-circle mb-4">
   <img src="fotos/marcelo.jpg" alt="Foto de Marcelo Santos Jr" class="rounded-circle shadow" style="width: 150px; height: 150px; object-fit: cover;">
 </div>
-    <h1 class="display-4 fw-bold">Marcelo Santos Jr</h1>
-    <h2 class="lead text-light">DevOps & Infrastructure Specialist</h2>
-    <div class="d-flex flex-wrap justify-content-center gap-2 my-4">
-      <span class="badge bg-secondary fs-6">🚀 Especialista em E-commerce</span>
-      <span class="badge bg-secondary fs-6">🌐 Redes de Computadores</span>
-      <span class="badge bg-secondary fs-6">🛠 Infraestrutura</span>
-      <span class="badge bg-secondary fs-6">🔒 Segurança da Informação</span>
-    </div>
-    <p class="text-light col-lg-8 mx-auto mb-4">
-      Profissional de Tecnologia da Informação com mais de 15 anos de experiência, especializado em infraestrutura, segurança da informação e comércio eletrônico. Atuo na transformação de desafios tecnológicos em oportunidades estratégicas para negócios digitais.
-    </p>
-    <div class="d-flex flex-wrap justify-content-center gap-3">
-      <a href="https://wa.me/+5571992342639" target="_blank" class="btn btn-outline-light"><i class="fab fa-whatsapp me-2"></i>WhatsApp</a>
-      <a href="https://github.com/marcelosantosjr" class="btn btn-outline-light"><i class="fab fa-github me-2"></i>GitHub</a>
-      <a href="https://www.linkedin.com/in/marcelo-santos-015851135/" class="btn btn-outline-light"><i class="fab fa-linkedin me-2"></i>LinkedIn</a>
-    </div>
+    <h1 class="display-4 fw-bold fade-in">Marcelo Santos Jr</h1>
+<h2 class="lead text-light fade-in delay-1">DevOps & Infrastructure Specialist</h2>
+<div class="d-flex flex-wrap justify-content-center gap-2 my-4 fade-in delay-2">
+  <span class="badge bg-secondary fs-6">🚀 Especialista em E-commerce</span>
+  <span class="badge bg-secondary fs-6">🌐 Redes de Computadores</span>
+  <span class="badge bg-secondary fs-6">🛠 Infraestrutura</span>
+  <span class="badge bg-secondary fs-6">🔒 Segurança da Informação</span>
+</div>
+    <p class="text-light col-lg-8 mx-auto mb-4 fade-in delay-3">
+  Profissional de Tecnologia da Informação com mais de 15 anos de experiência, especializado em infraestrutura, segurança da informação e comércio eletrônico. Atuo na transformação de desafios tecnológicos em oportunidades estratégicas para negócios digitais.
+</p>
+<div class="d-flex flex-wrap justify-content-center gap-3 fade-in delay-4">
+  <a href="https://wa.me/+5571992342639" target="_blank" class="btn btn-outline-light"><i class="fab fa-whatsapp me-2"></i>WhatsApp</a>
+  <a href="https://github.com/marcelosantosjr" class="btn btn-outline-light"><i class="fab fa-github me-2"></i>GitHub</a>
+  <a href="https://www.linkedin.com/in/marcelo-santos-015851135/" class="btn btn-outline-light"><i class="fab fa-linkedin me-2"></i>LinkedIn</a>
+</div>
   </div>
 </section>
 
