--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <li><i class="fa fa-check me-2 text-primary"></i>Chatwoot</li>
           <li><i class="fa fa-check me-2 text-primary"></i>Evolution</li>
           <li><i class="fa fa-check me-2 text-primary"></i>Cloudways</li>
-          <li><i class="fa fa-check me-2 text-primary"></i>Google Worspace</li>
+          <li><i class="fa fa-check me-2 text-primary"></i>Google Workspace</li>
           <li><i class="fa fa-check me-2 text-primary"></i>Microsoft Office 365</li>
         </ul>
       </div>
