--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
       Interessado em discutir projetos de infraestrutura, DevOps ou segurança? Entre em contato!
     </p>
     <div class="d-flex flex-wrap justify-content-center gap-4 mb-4">
-      <div><i class="fas fa-envelope me-2"></i> marcelojr.tech@hotmail.com</div>
+      <div><i class="fas fa-envelope me-2"></i>marcelojr.tech@hotmail.com</div>
       <div><i class="fas fa-phone me-2"></i> +55 (71) 99234-2639</div>
       <div><i class="fas fa-map-marker-alt me-2"></i> São Paulo, SP</div>
     </div>
-    <a href="mailto:ana.silva@email.com" class="btn btn-light text-primary"><i class="fas fa-envelope me-2"></i>Enviar Mensagem</a>
+    <a href="marcelojr.tech@hotmail.com" class="btn btn-light text-primary"><i class="fas fa-envelope me-2"></i>Enviar Mensagem</a>
   </div>
 </section>
 
