--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="container">
     <h2 class="text-center fw-bold mb-5">Habilidades que utilizei nas minhas experiências de trabalho:</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
-      <div class="col">
+      <div class="col mobile-divider">
         <ul class="list-unstyled">
           <li><i class="fa fa-check me-2 text-primary"></i>Windows Server</li>
           <li><i class="fa fa-check me-2 text-primary"></i>AWS</li>
@@ -95,7 +95,7 @@
           <li><i class="fa fa-check me-2 text-primary"></i>Microsoft Office 365</li>
         </ul>
       </div>
-      <div class="col">
+      <div class="col mobile-divider">
         <ul class="list-unstyled">
           <li><i class="fa fa-check me-2 text-primary"></i>Trello</li>
           <li><i class="fa fa-check me-2 text-primary"></i>JSON</li>
@@ -109,7 +109,7 @@
           <li><i class="fa fa-check me-2 text-primary"></i>WORDPRESS</li>
         </ul>
       </div>
-      <div class="col">
+      <div class="col mobile-divider">
         <ul class="list-unstyled">
           <li><i class="fa fa-check me-2 text-primary"></i>Zabbix</li>
           <li><i class="fa fa-check me-2 text-primary"></i>Prometheus</li>
@@ -123,7 +123,7 @@
           <li><i class="fa fa-check me-2 text-primary"></i>Python</li>
         </ul>
       </div>
-      <div class="col">
+      <div class="col mobile-divider">
         <ul class="list-unstyled">
           <li><i class="fa fa-check me-2 text-primary"></i>Manutenção de Computadores</li>
           <li><i class="fa fa-check me-2 text-primary"></i>Azure DevOps</li>
@@ -139,7 +139,8 @@
       </div>
     </div>
   </div>
-</section
+</section>
+
 
 <!-- Contact -->
 <section class="py-5 text-white text-center bg-gradient">
