--- a/index.html
+++ b/index.html
@@ -57,16 +57,20 @@
     <h2 class="text-center fw-bold mb-5">Formação Acadêmica</h2>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <div class="card shadow-sm mb-4">
-          <div class="card-body">
-            <h5 class="card-title mb-1">Bacharelado em Sistemas de Informação</h5>
-            <p class="card-text text-muted">Unifacs (2015 – 2019)</p>
+        <div class="card shadow-sm">
+          <div class="card-body d-flex align-items-center flex-column flex-md-row text-center text-md-start">
+            <img src="fotos/images.jpg" alt="Logo da Faculdade" width="75" height="75" class="me-md-4 mb-3 mb-md-0 rounded-circle shadow-sm">
+            <div>
+              <h5 class="card-title mb-1">Bacharelado em Sistemas de Informação</h5>
+              <p class="card-text text-muted">Universidade Salvador (2015 – 2018)</p>
+            </div>
           </div>
-        </div>
+        </div>git 
       </div>
     </div>
   </div>
 </section>
+
 
 <!-- Experience -->
 <section class="py-5 bg-light">
