--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <p class="card-text text-muted">Universidade Salvador (2015 – 2018)</p>
             </div>
           </div>
-        </div>git 
+        </div>
       </div>
     </div>
   </div>
